# otus-4

./: CMakeLists.txt
sources/: CMakeLists.txt  metafunctions.cpp  pretty.h  sfinae.cpp  sfinae_sort.cpp
src/: container_helper.hpp  integral_helper.hpp  main.cpp  my_allocator.hpp  my_container.hpp  print_ip.hpp  tuple_helper.hpp
